--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Rename this file to .env after filling in your MFLIX_DB_URI and your SECRET_KEY
 # Do not surround the URI with quotes
-SECRET_KEY=NguyenduDtdNh2605@!)$
+SECRET_KEY=abcdef8234857
 MFLIX_DB_URI=mongodb+srv://admin:nguyendu@my-web-xj9qm.mongodb.net/test?retryWrites=true&w=majority
 MFLIX_NS=Web
 PORT=5000
