--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "micromodal": "^0.4.6",
     "mongodb": "^3.5.5",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
