--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "JS-challenge Web",
   "main": "index.js",
   "scripts": {
-    "start": "node -r esm ./index.js"
+    "start": "nodemon -r esm ./index.js"
   },
   "dependencies": {
     "assert": "^2.0.0",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "cryptr": "^6.0.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "micromodal": "^0.4.6",
     "mongodb": "^3.5.5",
