--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.0.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "micromodal": "^0.4.6",
