--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mailgun-js": "^0.22.0",
     "micromodal": "^0.4.6",
     "mongodb": "^3.5.5",
     "morgan": "^1.10.0",
